src/objects/Apttus_Config2__ConstraintRuleAction__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ActionCriteria__c</fullName>
        <description>Represents the criteria to search for product or match a product depending on the type of the rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>Message entered in this field is displayed when the rule action requires user attention.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example: Please select one of the following product {0}.</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>Product category should be specified when product scope is set as Product Category</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>Product family should be specified when the product scope is set as Product Family.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>